// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create bigint data: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model migrate {
  version Int @id
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`create bigint data: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`create with data: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model teams {
  id   Int    @default(autoincrement()) @id
  name String @unique
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`create with data: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`create with empty data and SQL default: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model teams {
  id   Int    @default(autoincrement()) @id
  name String @default("alice")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`create with empty data and SQL default: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`delete where composite PK: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model variables {
  name  String
  key   String
  value String
  email String

  @@id([name, key])
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`delete where composite PK: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`delete where composite unique: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model users {
  id    Int    @default(autoincrement()) @id
  email String
  name  String

  @@unique([email, name], name: "users_email_name_key")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`delete where composite unique: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`deleteMany where enum - check count: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model posts {
  id        Int             @default(autoincrement()) @id
  title     String
  published posts_published @default(DRAFT)
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

enum posts_published {
  DRAFT
  PUBLISHED
}

`;

exports[`deleteMany where enum - check count: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`deleteMany where enum - check findMany: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model posts {
  id        Int             @default(autoincrement()) @id
  title     String
  published posts_published @default(DRAFT)
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

enum posts_published {
  DRAFT
  PUBLISHED
}

`;

exports[`deleteMany where enum - check findMany: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany - default enum: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model posts {
  id        Int             @default(autoincrement()) @id
  title     String
  published posts_published @default(DRAFT)
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

enum posts_published {
  DRAFT
  PUBLISHED
}

`;

exports[`findMany - default enum: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany - email text: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model users {
  id    Int     @default(autoincrement()) @id
  email String?
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany - email text: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany - email varchar(50) not null unique: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model users {
  id    Int    @default(autoincrement()) @id
  email String @unique
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany - email varchar(50) not null unique: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany on column_name_that_becomes_empty_string: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model column_name_that_becomes_empty_string {
  field1   Int  @default(autoincrement()) @id
  // This field was commented out because of an invalid name. Please provide a valid one that matches [a-zA-Z][a-zA-Z0-9_]*
  // 12345 Int? @map("12345")
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model invalid_enum_value_name {
  field1       Int                                   @default(autoincrement()) @id
  here_be_enum invalid_enum_value_name_here_be_enum?
}

// The underlying table does not contain a valid unique identifier and can therefore currently not be handled.
// model no_unique_identifier {
  // field1 Int?
  // field2 Int?
// }

model unsupported_type {
  field1         Int     @default(autoincrement()) @id
  // This type is currently not supported.
  // unsupported binary?
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

enum invalid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")
}

`;

exports[`findMany on column_name_that_becomes_empty_string: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        model: no_unique_identifier,
      },
    ],
    code: 1,
    message: The following models were commented out as they do not have a valid unique identifier or id. This is currently not supported by Prisma.,
  },
  Object {
    affected: Array [
      Object {
        field: 12345,
        model: column_name_that_becomes_empty_string,
      },
    ],
    code: 2,
    message: These fields were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
  Object {
    affected: Array [
      Object {
        field: unsupported,
        model: unsupported_type,
        tpe: binary,
      },
    ],
    code: 3,
    message: These fields were commented out because Prisma currently does not support their types.,
  },
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
      Object {
        enm: invalid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: invalid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany orderBy asc: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model posts {
  id        Int     @default(autoincrement()) @id
  title     String
  published Boolean @default(false)
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany orderBy asc: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany orderBy desc: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model posts {
  id        Int     @default(autoincrement()) @id
  title     String
  published Boolean @default(false)
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany orderBy desc: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where - case insensitive field: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model users {
  id    Int    @default(autoincrement()) @id
  email String @unique
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where - case insensitive field: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where OR[contains, contains] : datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model posts {
  id        Int     @default(autoincrement()) @id
  title     String
  published Boolean @default(false)
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where OR[contains, contains] : warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where contains and boolean: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model posts {
  id        Int     @default(autoincrement()) @id
  title     String
  published Boolean @default(false)
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where contains and boolean: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where contains: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model crons {
  id        Int     @default(autoincrement()) @id
  job       String  @unique
  frequency String?
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where contains: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where datetime exact: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model events {
  id   Int       @default(autoincrement()) @id
  time DateTime?
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where datetime exact: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where datetime gt: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model events {
  id   Int       @default(autoincrement()) @id
  time DateTime?
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where datetime gt: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where datetime gte: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model events {
  id   Int       @default(autoincrement()) @id
  time DateTime?
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where datetime gte: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where datetime lt: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model events {
  id   Int       @default(autoincrement()) @id
  time DateTime?
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where datetime lt: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where datetime lte - check instanceof Date: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model posts {
  id         Int      @default(autoincrement()) @id
  title      String
  created_at DateTime @default(now())
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where datetime lte - check instanceof Date: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where datetime lte: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model events {
  id   Int       @default(autoincrement()) @id
  time DateTime?
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where datetime lte: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where datetime not: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model events {
  id   Int       @default(autoincrement()) @id
  time DateTime?
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where datetime not: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where decimal: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model exercises {
  id       Int   @default(autoincrement()) @id
  distance Float
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where decimal: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where empty in[]: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model teams {
  id    Int    @default(autoincrement()) @id
  token Int    @unique
  name  String
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where empty in[]: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where empty notIn[]: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model teams {
  id    Int    @default(autoincrement()) @id
  token Int    @unique
  name  String
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where empty notIn[]: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where endsWith: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model crons {
  id        Int     @default(autoincrement()) @id
  job       String  @unique
  frequency String?
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where endsWith: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where id empty in[] and token in[]: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model teams {
  id    Int    @default(autoincrement()) @id
  token Int    @unique
  name  String
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where id empty in[] and token in[]: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where in[integer]: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model teams {
  id    Int    @default(autoincrement()) @id
  token Int    @unique
  name  String
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where in[integer]: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where in[string]: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model crons {
  id        Int     @default(autoincrement()) @id
  job       String  @unique
  frequency String?
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where in[string]: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where notIn[]: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model teams {
  id    Int    @default(autoincrement()) @id
  token Int    @unique
  name  String
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where notIn[]: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where null: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model events {
  id   Int       @default(autoincrement()) @id
  time DateTime?
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where null: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where startsWith: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model crons {
  id        Int     @default(autoincrement()) @id
  job       String  @unique
  frequency String?
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where startsWith: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where timestamp gt than now: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model posts {
  id         Int      @default(autoincrement()) @id
  title      String
  created_at DateTime @default(now())
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where timestamp gt than now: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where timestamp gte than now: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model posts {
  id         Int      @default(autoincrement()) @id
  title      String
  created_at DateTime @default(now())
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where timestamp gte than now: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where timestamp lt than now: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model posts {
  id         Int      @default(autoincrement()) @id
  title      String
  created_at DateTime @default(now())
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where timestamp lt than now: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findMany where unique: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model users {
  id    Int    @default(autoincrement()) @id
  email String @unique
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findMany where unique: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findOne where PK with include: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model posts {
  id      Int    @default(autoincrement()) @id
  user_id Int
  title   String
  users   users  @relation(fields: [user_id], references: [id])

  @@index([user_id], name: "user_id")
}

model users {
  id    Int     @default(autoincrement()) @id
  email String  @unique
  posts posts[]
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findOne where PK with include: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findOne where PK with select: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model teams {
  id    Int    @id
  name  String @unique
  email String @unique
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findOne where PK with select: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findOne where PK: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model teams {
  id   Int    @id
  name String @unique
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findOne where PK: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findOne where composite PK with foreign key: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model a {
  one Int
  two Int
  b   b[]

  @@id([one, two])
}

model b {
  id  Int @default(autoincrement()) @id
  one Int
  two Int
  a   a   @relation(fields: [one, two], references: [one, two])

  @@index([one, two], name: "one")
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findOne where composite PK with foreign key: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findOne where composite PK: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model variables {
  name  String
  key   String
  value String
  email String

  @@id([name, key])
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findOne where composite PK: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findOne where composite unique: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model users {
  id    Int    @default(autoincrement()) @id
  email String
  name  String

  @@unique([email, name], name: "users_email_name_key")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findOne where composite unique: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findOne where decimal: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model exercises {
  id       Int   @default(autoincrement()) @id
  distance Float @unique
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findOne where decimal: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findOne where unique composite (PK is a composite): datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model variables {
  name  String
  key   String
  value String
  email String

  @@id([name, key])
  @@unique([value, email], name: "variables_value_email_key")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findOne where unique composite (PK is a composite): warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findOne where unique composite: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model variables {
  id    Int    @default(autoincrement()) @id
  name  String
  key   String
  value String
  email String

  @@unique([name, key], name: "variables_name_key_key")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findOne where unique composite: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findOne where unique with foreign key and unpack: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model posts {
  id      Int    @default(autoincrement()) @id
  user_id Int
  title   String
  users   users  @relation(fields: [user_id], references: [id])

  @@index([user_id], name: "user_id")
}

model users {
  id    Int     @default(autoincrement()) @id
  email String  @unique
  posts posts[]
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findOne where unique with foreign key and unpack: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`findOne where unique: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model users {
  id    Int    @default(autoincrement()) @id
  email String @unique
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`findOne where unique: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`update where composite PK: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model variables {
  name  String
  key   String
  value String
  email String

  @@id([name, key])
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`update where composite PK: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`update where composite unique: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model users {
  id    Int    @default(autoincrement()) @id
  email String
  name  String

  @@unique([email, name], name: "users_email_name_key")
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`update where composite unique: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`update where integer data: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model teams {
  id    Int @default(autoincrement()) @id
  token Int @unique
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`update where integer data: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`update where with boolean data and select: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model teams {
  id     Int     @default(autoincrement()) @id
  name   String  @unique
  active Boolean @default(true)
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`update where with boolean data and select: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`update where with boolean data: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model teams {
  id     Int     @default(autoincrement()) @id
  name   String  @unique
  active Boolean @default(true)
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`update where with boolean data: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`update where with numeric data: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model teams {
  id   Int    @default(autoincrement()) @id
  name String @unique
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`update where with numeric data: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`update where with string data: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model teams {
  id   Int    @default(autoincrement()) @id
  name String @unique
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`update where with string data: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`update with data - not null enum - check findMany: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model posts {
  id        Int             @default(autoincrement()) @id
  title     String
  published posts_published @default(DRAFT)
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

enum posts_published {
  DRAFT
  PUBLISHED
}

`;

exports[`update with data - not null enum - check findMany: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`update with data - not null enum: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model posts {
  id        Int             @default(autoincrement()) @id
  title     String
  published posts_published @default(DRAFT)
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

enum posts_published {
  DRAFT
  PUBLISHED
}

`;

exports[`update with data - not null enum: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`updateMany where null - check findMany: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model teams {
  id   Int     @default(autoincrement()) @id
  name String?
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`updateMany where null - check findMany: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`updateMany where with string data - check findMany: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model teams {
  id   Int    @default(autoincrement()) @id
  name String
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`updateMany where with string data - check findMany: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`updateMany where with string data - check returned count: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model teams {
  id   Int    @default(autoincrement()) @id
  name String
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`updateMany where with string data - check returned count: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`updateMany with data - not null enum - check count: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model posts {
  id        Int             @default(autoincrement()) @id
  title     String
  published posts_published @default(DRAFT)
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

enum posts_published {
  DRAFT
  PUBLISHED
}

`;

exports[`updateMany with data - not null enum - check count: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`upsert (create): datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model posts {
  id        Int     @default(autoincrement()) @id
  title     String
  published Boolean @default(false)
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`upsert (create): warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`upsert (update): datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model posts {
  id        Int     @default(autoincrement()) @id
  title     String
  published Boolean @default(false)
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`upsert (update): warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`upsert where composite PK - create: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model variables {
  name  String
  key   String
  value String
  email String

  @@id([name, key])
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`upsert where composite PK - create: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;

exports[`upsert where composite PK - update: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource mysql {
  provider = "mysql"
  url = "***"
}

model inva_lid_enum_value_name {
  field1       Int                                    @default(autoincrement()) @id
  here_be_enum inva_lid_enum_value_name_here_be_enum?

  @@map("inva lid_enum_value_name")
}

model variables {
  name  String
  key   String
  value String
  email String

  @@id([name, key])
}

enum inva_lid_enum_value_name_here_be_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")

   @@map("inva lid_enum_value_name_here_be_enum")
}

`;

exports[`upsert where composite PK - update: warnings 1`] = `
Array [
  Object {
    affected: Array [
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: 123,
      },
      Object {
        enm: inva_lid_enum_value_name_here_be_enum,
        value: $§!,
      },
    ],
    code: 4,
    message: These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` directive.,
  },
]
`;
